woops. fixed bug where the menu didnt have enough z-index to be the topmost layer

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -93,10 +93,10 @@ body .v-application {
 .menu-link {
   color: white !important;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 25px;
   font-weight: 600;
   margin: 0 26px 0 0;
-  padding: 10px 3px 4px;
+  padding: 28px 0;
   border-bottom: solid 2px transparent;
 }
 .drop-us-a-line {
@@ -345,7 +345,7 @@ body .v-application {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  z-index: 2;
+  z-index: 4;
   text-align: center;
   top: 0;
   left: 0;
@@ -356,7 +356,7 @@ body .v-application {
 }
 
 .hamburger-button {
-  z-index: 3;
+  z-index: 5;
   display: none;
   cursor: pointer;
   position: fixed;
